<resources>
    <string name="app_name">LookintotheSky</string>
    <string name="disptype">Air Pollution</string>
    <string name="dispday">Day</string>
    <string name="menu_selectstation">Select Station</string>
    <string name="menu_help">help</string>
    <string name="menu_share">share</string>
    <string name="spec_KB" translatable="false">KB</string>
    <string name="spec_MB" translatable="false">MB</string>
    <string name="title_activity_select_station">Select Station</string>
    <string name="PrefName">PrefName</string>
    <string name="MonitorStation">Monitoring Station</string>
    <string name="configure">Widget Settings</string>
    <string name="appwidget_text" translatable="false">PM2.5</string>
    <string name="CurrentType" translatable="false">CurrentType</string>
    <string name="CurrentDay" translatable="false">CurrentDay</string>
    <string name="CurrentPref" translatable="false">CurrentPref</string>
    <string name="day1">1 day</string>
    <string name="day2">2 days</string>
    <string name="day3">3 days</string>
    <string name="day4">4 days</string>
    <string name="day5">5 days</string>
    <string name="day6">6 days</string>
    <string name="day7">7 days</string>
    <string name="daymax">max</string>
    <string name="datatype_PM25" translatable="false">PM2.5</string>
    <string name="datatype_OX">OX</string>
    <string name="datatype_WS">WS</string>
    <string name="menu_setting">Setting</string>
    <string name="disphour">Display Hours</string>
    <string name="updatetime">Update Time</string>
    <string name="graph">graph</string>
    <string name="graph_back">graph back</string>
    <string name="graph_radius">graph radius</string>
    <string name="settings_summary_disphour">number of display</string>
    <string name="settings_summary_updatetime">update time</string>
    <string name="settings_summary_transparency">Transparency</string>
    <string name="settings_summary_dotradius">dot radius</string>
    <string name="unit_minutes">minutes</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="configure_notify">Notifications Settings</string>
    <string name="settings_summary_notify">Notifications</string>
    <string name="notify">Notifications</string>
    <string name="notify_value">Notify Value</string>
    <string name="settings_summary_notifyvalue">notify value</string>
    <string name="configure_graph">Graph Settings</string>
    <string name="notify_timezone">Notify Time zone</string>
    <string name="settings_summary_notify_timezone">set notify time zone</string>
    <string name="notify_title">Notify Title</string>
    <string name="notify_message">Notify Message</string>
</resources>
