<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.lunarbase24.lookintothesky.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disptype"
        android:textSize="@dimen/abc_text_size_menu_material"
        android:id="@+id/disptype"
        android:layout_below="@+id/toolbar"/>
    <Spinner
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_type"
        android:layout_below="@+id/toolbar"
        android:layout_toRightOf="@+id/disptype"
        android:layout_toEndOf="@+id/disptype" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dispday"
        android:textSize="16sp"
        android:id="@+id/dispday"
        android:layout_below="@+id/toolbar"
        android:layout_toRightOf="@+id/spinner_type"
        android:layout_toEndOf="@+id/spinner_type"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDay"
        android:layout_toEndOf="@+id/dispday"
        android:layout_toRightOf="@+id/dispday"
        android:layout_below="@+id/toolbar" />

    <TextView
        android:id="@+id/db_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="db_size"
        android:layout_below="@+id/toolbar"
        android:layout_toEndOf="@+id/spinnerDay"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_below="@+id/spinner_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/graphview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
